--- a/views/content.html
+++ b/views/content.html
@@ -24,30 +24,32 @@ Addons may add buttons to the top-right and bottom-right corner. Buttons to add 
                 
                 <div class="extension-example-addon1-centered-page"> <!-- This centered page div sets a maximum with for the content and centers it. -->
                     
-                    <h2>Main page</h2>
-                
-                    <div id="extension-example-addon1-loading">
-                        <div class="extension-example-addon1-spinner">
-                            <div></div><div></div><div></div><div></div>
-                        </div>
-                    </div>
-                    
-                    
-                    
-                    
-                    <div id="extension-example-addon1-main-items-list">(Items list will be loaded here)</div>
-                
-                    <p>Or you could show the state of the thing here. At least, the state of the thing when the addon loaded. </p>
+                    <h2>This addon is in very early development</h2>
+		    <p>It doesn't do anything yet. Well, it creates a matter server. But it doesn't use the data from that yet.</p>
 
-                    <div class="extension-example-addon1-area">
-                        <p>Slider value when the addon loaded: <span id="extension-example-addon1-slider-value-output">...</span></p>
-                    </div>
-                    
-                    <p>You could create an interval to continuously get the latest values, but that's something for a more advanced example.</p>
-                
-                    <!-- By having this button inside of this tab, it will be automatically hidden when it's pressed-->
-                    <button id="extension-example-addon1-show-second-page-button" class="icon-button"></button>
-        
+			
+		    <div style="opacity:0">
+			    <div id="extension-example-addon1-loading">
+				<div class="extension-example-addon1-spinner">
+				    <div></div><div></div><div></div><div></div>
+				</div>
+			    </div>
+
+
+
+			    <div id="extension-example-addon1-main-items-list">(Items list will be loaded here)</div>
+
+			    <p>Or you could show the state of the thing here. At least, the state of the thing when the addon loaded. </p>
+
+			    <div class="extension-example-addon1-area">
+				<p>Slider value when the addon loaded: <span id="extension-example-addon1-slider-value-output">...</span></p>
+			    </div>
+
+			    <p>You could create an interval to continuously get the latest values, but that's something for a more advanced example.</p>
+
+			    <!-- By having this button inside of this tab, it will be automatically hidden when it's pressed-->
+			    <button id="extension-example-addon1-show-second-page-button" class="icon-button"></button>
+		    </div>
                 </div>
                 
             </div>
