--- a/views/content.html
+++ b/views/content.html
@@ -101,10 +101,11 @@ Addons may add buttons to the top-right and bottom-right corner. Buttons to add 
                 <div id="extension-matter-adapter-pairing-step2" class="extension-matter-adapter-area extension-matter-adapter-hidden">
                     <h4>STEP 2 - Pairing "<span id="extension-matter-adapter-pairing-step2-device-title">...</span>"</h4>
                     <p>Your device came with a unique pairing code. Please enter that code here:</p>
-                    <input id="extension-matter-adapter-manual-pairing-code" type="text" placeholder="Pairing code"/>
-                    <button id="extension-matter-adapter-start-pairing-button" class="text-button">Start pairing</button>
-                    
-                    <div id="extension-matter-adapter-busy-pairing-hint" class="extension-matter-adapter-area extension-matter-adapter-hidden">
+                    <input id="extension-matter-adapter-pairing-code" type="text" placeholder="Pairing code"/>
+                    <div class="extension-matter-adapter-align-right">
+                        <button id="extension-matter-adapter-start-pairing-button" class="text-button">Start normal pairing</button> <button id="extension-matter-adapter-start-network-pairing-button" class="text-button">Start network pairing</button>
+                    </div>
+                    <div id="extension-matter-adapter-busy-pairing-indicator" class="extension-matter-adapter-area extension-matter-adapter-hidden">
     				    <div class="extension-matter-adapter-spinner">
     				        <div></div><div></div><div></div><div></div>
     				    </div>
