--- a/views/content.html
+++ b/views/content.html
@@ -66,7 +66,7 @@ Addons may add buttons to the top-right and bottom-right corner. Buttons to add 
             
             
             
-            <div id="extension-matter-adapter-second-page">
+            <div id="extension-matter-adapter-second-page" class="extension-matter-adapter-busy-discovering">
                 
                 <div class="extension-matter-adapter-centered-page">
                 
